--- a/index.html
+++ b/index.html
@@ -4,43 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <script src="javascript.js" defer></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 id="header">Calculator</h1>
-    <div id="container">
-        <div id="calculator">
-            <div id="display">?</div>
-                <div id="btnRow">
-                    <button id="bigBtn">DELETE</button>
-                    <button id="bigBtn">CLEAR</button>
-                </div>
-                <div id="btnRow">
-                    <button id="btn">7</button>
-                    <button id="btn">8</button>
-                    <button id="btn">9</button>
-                    <button id="btn">/</button>
-                </div>
-                <div id="btnRow">
-                    <button id="btn">4</button>
-                    <button id="btn">5</button>
-                    <button id="btn">6</button>
-                    <button id="btn">X</button>
-                </div>
-                <div id="btnRow">
-                    <button id="btn">1</button>
-                    <button id="btn">2</button>
-                    <button id="btn">3</button>
-                    <button id="btn">-</button>
-                </div>
-                <div id="btnRow">
-                    <button id="btn">.</button>
-                    <button id="btn">0</button>
-                    <button id="equalsBtn">=</button>
-                    <button id="btn">+</button>
-                </div>
-        </div>  
+    <div id="calculator">
+        <div id="display">0</div>
+        <div id="buttons">
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="number">0</button>
+            <button class="operator">+</button>
+            <button class="operator">-</button>
+            <button class="operator">*</button>
+            <button class="operator">/</button>
+            <button id="equals">=</button>
+            <button id="clear">C</button>
+        </div>
     </div>
+    <script src="javascript.js"></script>
 </body>
 </html>
